--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -55,6 +55,44 @@ font-size: 18px;
     top:-8px;
     right:-8px;
  }
+
+ .navabr-profile{
+   position: relative;
+ }
+
+ .nav-profile-dropdown{
+   position: absolute;
+   display: none;
+   right: 90px;
+   z-index: 1;
+ }
+
+.navbar-profile:hover .nav-profile-dropdown{
+   display: flex;
+   flex-direction: column;
+   gap: 10px;
+   background-color: #fff4f2; 
+   padding: 15px 15px;
+   border-radius: 4px;
+   border: 1px solid tomato;
+   outline: 2px solid white;
+   list-style: none;
+ }
+
+ .nav-profile-dropdown li{
+   display: flex;
+      align-items: center;
+      gap: 10px;
+      cursor: pointer;
+ }
+
+ .nav-profile-dropdown img{
+   width: 20px;
+ }
+
+ .nav-profile-dropdown li:hover{
+   color: tomato;
+ }
  @media (max-width:1050px){
    .navbar .logo{
       width:140px ;
