--- a/src/pages/PlaceOrder/PlaceOrder.css
+++ b/src/pages/PlaceOrder/PlaceOrder.css
@@ -5,23 +5,23 @@
     gap:50px;
     margin-top: 100px;
 }
-.place-oredr-left{
+.place-order-left{
     width:100%;
     max-width:max(30%,500px);
 }
-.place-oredr-left .title{
+.place-order-left .title{
     font-size: 30px;
     font-weight: 600;
     margin-bottom: 50px;
 }
-.place-oredr-left input{
+.place-order-left input{
     margin-bottom: 15px;
     width:100%;
     padding: 10px;
     border-radius: 4px;
     outline-color:tomato
 }
-.place-oredr-left .multi-field{
+.place-order-left .multi-field{
     display: flex;
     gap:10px;
 }
